# X-Mas-Tree-Animated-GIF

./: .gitignore  README.md
Cardputer/PIO/: platformio.ini
Cardputer/PIO/include/: lv_conf.h
Cardputer/PIO/lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Cardputer/PIO/lib/ui/src/components/: ui_comp_hook.c
Cardputer/PIO/lib/ui/src/images/: ui_img_tree_frame_00_png.c  ui_img_tree_frame_01_png.c  ui_img_tree_frame_02_png.c  ui_img_tree_frame_03_png.c  ui_img_tree_frame_04_png.c  ui_img_tree_frame_05_png.c  ui_img_tree_frame_06_png.c  ui_img_tree_frame_07_png.c  ui_img_tree_frame_08_png.c  (+39 more)
Cardputer/PIO/src/: main.cpp
Cardputer/SLS/: Xmas tree.sll  Xmas tree.spj
Lilygo/PIO/: README.md  platformio.ini
Lilygo/PIO/lib/: lv_conf.h
Lilygo/PIO/lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h
Lilygo/PIO/lib/ui/src/images/: ui_img_tree_frame_00_png.c  ui_img_tree_frame_01_png.c  ui_img_tree_frame_02_png.c  ui_img_tree_frame_03_png.c  ui_img_tree_frame_04_png.c  ui_img_tree_frame_05_png.c  ui_img_tree_frame_06_png.c  ui_img_tree_frame_07_png.c  ui_img_tree_frame_08_png.c  ui_img_tree_frame_09_png.c  ui_img_tree_frame_10_png.c  ui_img_tree_frame_11_png.c  ui_img_tree_frame_12_png.c  ui_img_tree_frame_13_png.c  ui_img_tree_frame_14_png.c  ui_img_tree_frame_15_png.c  ui_img_tree_frame_16_png.c  ui_img_tree_frame_17_png.c  ui_img_tree_frame_18_png.c  ui_img_tree_frame_19_png.c
Lilygo/PIO/lib/ui/src/screens/: ui_Screen1.c
Lilygo/PIO/src/: main.cpp
Lilygo/SLS/: SquareLine_Project.sll  SquareLine_Project.spj
(+1 files in other folders)
